--- a/src/components/device/device.module.scss
+++ b/src/components/device/device.module.scss
@@ -1,16 +1,22 @@
 $w: 9;
 $h: 21;
 $scale: 20px;
+$trans: all 2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 
 .wrapper {
-  perspective: 1100px;
+  perspective: 1200px;
   perspective-origin: bottom;
   outline: none;
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: $trans;
+  z-index: -100;
 }
 
 .device {
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: $trans;
   width: $scale * $w;
   height: $scale * $h;
   border: 1px solid black;
@@ -19,17 +25,49 @@ $scale: 20px;
   transform: rotateY(0deg) rotateX(0deg);
   box-shadow: 0 0 0 #fff;
   border-bottom: 7px solid black;
+  cursor: pointer;
+}
+
+.shine {
+  position: absolute;
+  transition: $trans;
+  top: 0;
+  left: 0;
+  z-index: 30;
+  width: 180vw;
+  height: 180vh;
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
+  background: radial-gradient(
+    rgba(253, 220, 215, .4) 10%,
+    rgba(253, 220, 215, 0) 55%,
+  );
+  opacity: 1;
+}
+
+.left {
+  transform: translate(-200%, -50%);
+  .shine {
+    transform: translate(-30%, -55%);
+  }
+}
+.right {
+  transform: translate(100%, -50%);
+  .shine {
+    transform: translate(-60%, -25%);
+  }
 }
 
 .side_left {
   transform: rotateY(-15deg) rotateX(25deg);
   border-right: 7px solid black;
+  border-left: 0px solid black;
   box-shadow: 40px 40px 40px 20px rgba(0, 0, 0, 0.4);
 }
 
 .side_right {
   transform: rotateY(15deg) rotateX(25deg);
   border-left: 7px solid black;
+  border-right: 0px solid black;
   box-shadow: -40px 40px 40px 20px rgba(0, 0, 0, 0.4);
 }
 
@@ -38,6 +76,7 @@ $scale: 20px;
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: -99;
 }
 
 .contents {
@@ -46,7 +85,54 @@ $scale: 20px;
   width: 100%;
   height: 97%;
   top: 1%;
-  z-index: 10;
+  z-index: -90;
+  background: #ddd;
+}
+
+.curve {
+  width: 10px;
+  height: 100%;
+  position: absolute;
+  z-index: -95;
+}
+.curve_left {
+  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+  left: 0;
+}
+
+.curve_right {
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
+  right: 0;
+}
+
+.camera {
+  $size: $scale * 0.7;
+  width: $size;
+  height: $size;
+  z-index: 97;
+  position: absolute;
+  background: #000;
+  left: ($scale * $w) / 2 - ($size / 2);
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  .dot {
+    width: $size * 0.2;
+    height: $size * 0.2;
+    background: green;
+    border-radius: 50%;
+  }
+}
+
+.contents {
+  position: absolute;
+  border-radius: 20px;
+  width: 100%;
+  height: 97%;
+  top: 1%;
+  z-index: -98;
   background: #00c6ff;
   background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);
   background: linear-gradient(to right, #0072ff, #00c6ff);
@@ -74,76 +160,10 @@ $scale: 20px;
     }
 }
 
-.shine {
-  width: 10px;
-  height: 100%;
-  position: absolute;
-  z-index: 20;
-}
-.shine_left {
-  background-image: linear-gradient(to left, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-  left: 0;
+.hide {
+  display: none;
 }
 
-.shine_right {
-  background-image: linear-gradient(to right, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-  right: 0;
-}
-
-.triangle {
-  transition: all 0.3s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  position: absolute;
-  z-index: 30;
-  width: 100%;
-  height: 100%;
-  margin-left: -$scale * $w;
-  margin-right: -$scale * $w;
-  opacity: 0;
-}
-
-.triangle_left {
-  clip-path: polygon(100% 0, 0 0, 0 75%);
-  background: linear-gradient(
-    120deg,
-    rgba(255, 255, 255, 0.5) 0,
-    rgba(255, 255, 255, 0.3) 20%,
-    rgba(255, 255, 255, 0) 35%
-  );
-  margin-left: 0;
-  left: 0;
-  opacity: 1;
-}
-
-.triangle_right {
-  clip-path: polygon(100% 0, 0 0, 100% 75%);
-  background: linear-gradient(
-    240deg,
-    rgba(255, 255, 255, 0.5) 0,
-    rgba(255, 255, 255, 0.3) 20%,
-    rgba(255, 255, 255, 0) 35%
-  );
-  margin-right: 0;
-  right: 0;
-  opacity: 1;
-}
-
-.camera {
-  $size: $scale * 0.7;
-  width: $size;
-  height: $size;
-  z-index: 25;
-  position: absolute;
-  background: #000;
-  left: ($scale * $w) / 2 - ($size / 2);
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  .dot {
-    width: $size * 0.2;
-    height: $size * 0.2;
-    background: green;
-    border-radius: 50%;
-  }
+.show {
+  display: grid;
 }
