--- a/src/components/device/device.module.scss
+++ b/src/components/device/device.module.scss
@@ -123,12 +123,24 @@ $trans: all 2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   height: 97%;
   top: 1%;
   z-index: -98;
+  background: #FC466B;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #3F5EFB, #FC466B);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #3F5EFB, #FC466B); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  transition: all .2s ease-in .2s;
+  h3 {
+    text-align: center;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: 100;
+    line-height: 200%;
+    color: #fff;
+    text-shadow: 0 0 3px #222;
+  }
 }
 
 .hide {
-  display: none;
+  opacity: 0;
 }
 
 .show {
-  display: grid;
+  opacity: 1;
 }
